--- a/css/estilos.css
+++ b/css/estilos.css
@@ -145,6 +145,11 @@ header .textos-header{
 .imagen-port{
     width: 24%;
     margin-bottom: 10px;
+    height: 200px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
 
 }
 
@@ -153,4 +158,65 @@ header .textos-header{
     height: 100%;
     object-fit: cover;
     display: block;
+}
+
+
+.hover-galeria{
+    position: absolute;
+    width:100%;
+    height: 100%;
+    top: 0;
+    transform: scale(0);
+    background: hsla(273,91%,27%, 0.7);
+    transition:  transform .5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+
+}
+
+
+.hover-galeria img{
+    width: 50px;
+
+}
+
+.hover-galeria p{
+    color: #fff;
+
+}
+
+.imagen-port:hover .hover-galeria{
+    transform: scale(1);
+
+}
+
+/* Clients */
+
+.card{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.card .card{
+    background: #4d0686;
+    display: flex;
+    width: 46%;
+    height: 200px;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 5px;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6)
+
+}
+
+.card .card img{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 3px solid #fff;
+    display: block;
+    
 }
