--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,7 +16,7 @@
     overflow: hidden;
 
 }
-
+/* estilos generales */
 .title {
     color: #642a74;
     font-size: 30px;
@@ -220,3 +220,21 @@ header .textos-header{
     display: block;
     
 }
+@media screen and (max-width:800pz){
+    .textos-hero h1{
+        text-align: center;
+        font-size: 50px;
+    }
+
+    .title{
+        font-size: 35px;
+    }
+
+    .title.left{
+        text-align: center;
+    }
+
+    
+
+}
+
