--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,7 @@
     overflow: hidden;
 
 }
+
 /* estilos generales */
 .title {
     color: #642a74;
@@ -40,27 +41,27 @@ header {
     background-attachment: fixed;
     position: relative;
 
-    
+
 }
 
-nav{
+nav {
     text-align: right;
     padding: 30px 50px 0 0;
 }
 
-nav > a{
-    color:#fff;
+nav>a {
+    color: #fff;
     font-weight: 300;
     text-decoration: none;
     margin-right: 10px;
 
 }
 
-nav > a:hover{
+nav>a:hover {
     text-decoration: underline;
 }
 
-header .textos-header{
+header .textos-header {
     display: flex;
     height: 430px;
     width: 100%;
@@ -69,19 +70,20 @@ header .textos-header{
     flex-direction: column;
     text-align: center;
 }
-.textos-header h1{
+
+.textos-header h1 {
     font: size 50px;
-    color:#fff
-
+    color: #fff
 }
-.textos-header h2{
+
+.textos-header h2 {
     font-size: 50px;
-    color:#fff;
+    color: #fff;
 
 }
 
 
-.wave{
+.wave {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -89,28 +91,28 @@ header .textos-header{
 
 /* About us */
 
-.contenedor-sobre-nosotros{
+.contenedor-sobre-nosotros {
     display: flex;
     justify-content: space-evenly;
 }
 
 
-.imagen-about-us{
+.imagen-about-us {
     width: 48%;
 }
 
-.sobre-nosotros .contenido-textos{
+.sobre-nosotros .contenido-textos {
     width: 48%;
 }
 
 
-.contenido-textos h3{
+.contenido-textos h3 {
     margin-bottom: 15px;
 }
 
-.contenido-textos h3 span{
+.contenido-textos h3 span {
     background-color: #4d0686;
-    color:#fff;
+    color: #fff;
     border-radius: 50%;
     display: inline-block;
     text-align: center;
@@ -122,7 +124,7 @@ header .textos-header{
 
 }
 
-.contenido-textos p{
+.contenido-textos p {
     padding: 0px 0px 25px 15px;
     font-weight: 300;
     text-align: justify;
@@ -131,18 +133,18 @@ header .textos-header{
 
 /* Galeria */
 
-.portaflio{
-    background:#f2f2f2;
+.portaflio {
+    background: #f2f2f2;
 
 }
 
-.galeria-port{
+.galeria-port {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
-.imagen-port{
+.imagen-port {
     width: 24%;
     margin-bottom: 10px;
     height: 200px;
@@ -153,7 +155,7 @@ header .textos-header{
 
 }
 
-.imagen-port > img{
+.imagen-port>img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -161,14 +163,14 @@ header .textos-header{
 }
 
 
-.hover-galeria{
+.hover-galeria {
     position: absolute;
-    width:100%;
+    width: 100%;
     height: 100%;
     top: 0;
     transform: scale(0);
-    background: hsla(273,91%,27%, 0.7);
-    transition:  transform .5s;
+    background: hsla(273, 91%, 27%, 0.7);
+    transition: transform .5s;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -178,29 +180,29 @@ header .textos-header{
 }
 
 
-.hover-galeria img{
+.hover-galeria img {
     width: 50px;
 
 }
 
-.hover-galeria p{
+.hover-galeria p {
     color: #fff;
 
 }
 
-.imagen-port:hover .hover-galeria{
+.imagen-port:hover .hover-galeria {
     transform: scale(1);
 
 }
 
 /* Clients */
 
-.card{
+.card {
     display: flex;
     justify-content: space-evenly;
 }
 
-.card .card{
+.card .card {
     background: #4d0686;
     display: flex;
     width: 46%;
@@ -209,32 +211,52 @@ header .textos-header{
     justify-content: space-evenly;
     border-radius: 5px;
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6)
-
 }
 
-.card .card img{
+.card .card img {
     width: 100px;
     height: 100px;
     object-fit: cover;
     border: 3px solid #fff;
     display: block;
-    
-}
-@media screen and (max-width:800pz){
-    .textos-hero h1{
-        text-align: center;
-        font-size: 50px;
-    }
-
-    .title{
-        font-size: 35px;
-    }
-
-    .title.left{
-        text-align: center;
-    }
-
-    
 
 }
 
+.card .card>.contenido-texto-card {
+    width: 60%;
+    color: rgb(189, 189, 189)
+}
+
+.card .card>.contenido-texto-card p {
+    font-weight: 300;
+    padding-top: 5px;
+}
+
+
+/* Our team */
+
+.about-services {
+    background: #f2f2f2;
+    padding-bottom: 30px;
+}
+
+.servicio-cont {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.servicio-individual {
+    width: 30%;
+    text-align: center;
+
+}
+
+.servicio-individual img {
+    width: 100%;
+    
+}
+
+.servicio-individual h3 {
+    margin: 10px 0;
+}
