--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,7 +18,7 @@
 }
 
 /* estilos generales */
-.title {
+.titulo {
     color: #642a74;
     font-size: 30px;
     text-align: center;
@@ -87,10 +87,13 @@ header .textos-header {
     position: absolute;
     bottom: 0;
     width: 100%;
+    
 }
 
 /* About us */
-
+main .sobre-nosotros{
+    padding: 30px 0 60px 0;
+}
 .contenedor-sobre-nosotros {
     display: flex;
     justify-content: space-evenly;
@@ -210,7 +213,9 @@ header .textos-header {
     align-items: center;
     justify-content: space-evenly;
     border-radius: 5px;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6)
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
+    margin-bottom: 50px;
+    
 }
 
 .card .card img {
@@ -219,6 +224,7 @@ header .textos-header {
     object-fit: cover;
     border: 3px solid #fff;
     display: block;
+    
 
 }
 
@@ -259,4 +265,176 @@ header .textos-header {
 
 .servicio-individual h3 {
     margin: 10px 0;
+}
+
+
+@media screen and (max-width:900px){
+    header{
+        background-position: center;
+    }
+    .contenedor-sobre-nosotros{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .sobre-nosotros .contenido-textos{
+        width: 90%;
+
+
+    }
+    .imagen-about-us{
+        width: 90%;
+    }
+
+    /* Galeria */
+
+    .imagen-port{
+        width: 44%;
+    }
+
+
+    /* Clientes */
+
+    .card{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    .card .card{
+        width: 90%;
+
+    }
+    .card .card:first-child{
+        margin-bottom: 30px;
+
+
+
+    }
+
+    /* servicios */
+    .servicio-cont{
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .servicio-individual{
+        width: 100%;
+        text-align: center;
+    }
+
+
+    .servicio-individual:nth-child(1), .servicio-individual:nth-child(2){
+        margin-bottom: 60px;
+    }
+    .servicio-individual img{
+        width: 90%;
+    }
+        
+    
+}
+
+@media screen and (max-width: 500px){
+    nav{
+        text-align: center;
+        padding: 30px 0 0 0;    
+    }
+
+    nav > a{
+        margin-right: 5px;
+
+    }
+    .textos-header h1{
+        font-size: 35px;
+    }
+    .textos-header h2{
+        font-size: 20px;
+    }
+
+    /* ABOUT US */
+
+    .imagen-about-us{
+        margin-bottom: 60px;
+        width: 99%;
+    }
+    .sobre-nosotros .contenido-textos{
+        width: 95%;
+    }
+
+
+    /* Galeria */
+    .imagen-port{
+        width: 99%;
+
+    } 
+
+    /* Clientes */
+
+    .card .card{
+        height: 450px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+
+    }
+
+    .card .card img{
+        width: 90px;
+        height: 90px;
+    }
+
+
+    /* Footer */
+    .contenedor-footer{
+        flex-direction: column;
+        border: none;
+        margin-bottom: 20px;
+        text-align: center;
+        background-color: #ccc;
+    }
+
+    .content-foo{
+        margin-bottom: 20px;
+        text-align: center;
+        background-color: #ccc;
+    }
+
+    .content-foo h4{
+        border: none;
+        background-color:#4d0686
+        
+    }
+    .content-foo p{
+        color:rgb(0, 0, 0);
+        border-bottom: 1px solid #f2f2f2;
+        padding-bottom: 20px;
+        background-color: hsla(341, 44%, 62%, 0.411);
+    }
+
+    .titulo-final{
+        font-size: 20px;
+    }
+
+
+}
+.content-foo h4{
+    border: none;
+    background-color:#f2f2f2;
+    text-align: center;
+    
+}
+.content-foo p{
+    color:rgb(0, 0, 0);
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 20px;
+    background-color: #f2f2f2;
+    text-align: center;
+}
+
+.titulo-final{
+    font-size: 20px;
+    background-color: #f2f2f2;
 }
